# vox

./: .gitignore  Cargo.toml  README.md
.github/scripts/: build-dmg.sh
asr/audio/: date.txt
src/: main.rs  model_download.rs  normalization.rs  output.rs  processing.rs  recording.rs  settings.rs  vad.rs
src/asr/: engine.rs  mod.rs
src/asr/moonshine/: decoder.rs  inference.rs  mod.rs  session.rs  tokenizer.rs  transcriber.rs
src/asr/parakeet/: config.rs  mod.rs  transcriber.rs
src/audio/: capture.rs  device.rs  mod.rs
src/platform/: mod.rs
src/platform/macos/: accessibility.rs  coreml.rs  home.rs  keyboard.rs  mod.rs  output.rs  tray.rs
src/platform/other/: accessibility.rs  home.rs  keyboard.rs  mod.rs  output.rs  tray.rs
src/platform/other/tests/: keyboard.rs
src/tests/: mod.rs  model_download.rs  model_download_network.rs  model_path.rs  normalization.rs  settings.rs  updater.rs
src/tray/: event_loop.rs  menu.rs  mod.rs
