[package]
name = "vox"
version = "0.1.0"
edition = "2021"
description = "ASR/STT application"

[dependencies]
cpal = { version = "0.17.3" }
rdev = { version = "0.5.3", features = ["serialize"] }
arboard = { version = "3.6.1" }
rubato = { version = "1.0.1", default-features = false }
audioadapter-buffers = { version = "2.0" }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = { version = "1.0.149" }
text-processing-rs = { version = "0.1" }
tray-icon = { version = "0.21.3", default-features = false }
image = { version = "0.25.10", default-features = false, features = ["png"] }
self_update = { version = "0.43.1", default-features = false, features = [
    "ureq",
    "rustls",
] }
ureq = { version = "3.3.0", features = ["json"] }
zip = { version = "8.4.0", default-features = false, features = ["deflate"] }
rtrb = { version = "0.3.3" }
ort = { version = "2.0.0-rc.12", features = ["coreml"] }
ndarray = "0.17"
half = "2.5"

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = { version = "0.6.4" }
objc2-foundation = { version = "0.3.2", features = [
    "NSArray",
    "NSString",
    "NSURL",
    "NSDictionary",
    "NSError",
    "NSValue",
    "NSObject",
] }
objc2-core-ml = { version = "0.3.2" }

[profile.dev]
debug = "line-tables-only"

[profile.dev.package."*"]
debug = false
opt-level = 1

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"

[profile.release.build-override]
opt-level = 0
codegen-units = 256

[profile.release.package."rubato"]
opt-level = 3

[profile.dist]
inherits = "release"
opt-level = "z"
lto = true
codegen-units = 1
strip = "symbols"
panic = "abort"

[package.metadata.deb]
name = "vox"
section = "utility"
priority = "optional"
depends = "$auto"
profile = "dist"
extended-description = "ASR/STT application."
assets = [
    ["target/release/vox", "usr/bin/vox", "755"],
    ["assets/on.png", "usr/share/icons/hicolor/256x256/apps/vox.png", "644"],
]

[package.metadata.generate-rpm]
name = "vox"
summary = "ASR/STT application"
release = 1
auto-req = "builtin"

[[package.metadata.generate-rpm.assets]]
source = "target/release/vox"
dest = "/usr/bin/vox"
mode = "0755"

[[package.metadata.generate-rpm.assets]]
source = "assets/on.png"
dest = "/usr/share/icons/hicolor/256x256/apps/vox.png"
mode = "0644"

[dev-dependencies]
hound = "3.5.1"